--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <string name="g_i">Gửi</string>
     <string name="l_u">Lưu</string>
+    <string name="dang_xuat">Đăng Xuất</string>
     <string name="shop">Trang Chủ</string>
     <string name="explore">Tìm Kiếm</string>
     <string name="cart">Giỏ Hàng</string>
