--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="login_go">Đăng nhập với Google</string>
 
     <string name="g_i">Gửi</string>
-    <string name="l_u">Lưu</string>
+    <string name="l_u">Lưu Thông Tin</string>
     <string name="dang_xuat">Đăng Xuất</string>
     <string name="shop">Trang Chủ</string>
     <string name="explore">Tìm Kiếm</string>
