--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
 
     /////////////////////
     <string name="g_i">Gửi</string>
-    <string name="l_u">Chỉnh sửa </string>
+    <string name="l_u">Lưu </string>
     <string name="dang_xuat">Đăng Xuất</string>
     <string name="shop">Trang Chủ</string>
     <string name="explore">Tìm Kiếm</string>
